--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-flask
-pandas
-geopy
-folium
-plotly
-dash
-dash-bootstrap-components
-gunicorn
-openpyxl
-
-
+pandas==2.2.0
+flask==3.0.0
+openpyxl==3.1.2
+folium==0.14.0
+plotly==5.18.0
+gunicorn==21.2.0
+geopy==2.4.1
